test: 인수테스트에서 픽스처 분리