@@ -1,12 +1,13 @@
 package com.woowacourse.zzimkkong.controller;
 
 import com.woowacourse.zzimkkong.domain.Reservation;
-import com.woowacourse.zzimkkong.domain.Space;
+import com.woowacourse.zzimkkong.dto.ReservationDeleteRequest;
 import com.woowacourse.zzimkkong.dto.ReservationFindAllResponse;
 import com.woowacourse.zzimkkong.dto.ReservationFindResponse;
 import com.woowacourse.zzimkkong.dto.ReservationSaveRequest;
-import com.woowacourse.zzimkkong.dto.ReservationDeleteRequest;
-import com.woowacourse.zzimkkong.exception.NoSuchSpaceException;
+import com.woowacourse.zzimkkong.repository.MapRepository;
+import com.woowacourse.zzimkkong.repository.MemberRepository;
+import com.woowacourse.zzimkkong.repository.ReservationRepository;
 import com.woowacourse.zzimkkong.repository.SpaceRepository;
 import io.restassured.RestAssured;
 import io.restassured.response.ExtractableResponse;
@@ -18,93 +19,64 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 
+import static com.woowacourse.zzimkkong.CommonFixture.*;
 import static com.woowacourse.zzimkkong.controller.DocumentUtils.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.restdocs.restassured3.RestAssuredRestDocumentation.document;
 
 public class ReservationControllerTest extends AcceptanceTest {
+    private static final String SALLY_PASSWORD = "1230";
+    private static final String SALLY_NAME = "sally";
+    private static final String SALLY_DESCRIPTION = "집 가고 싶은 회의";
+
+    @Autowired
+    private MemberRepository memberRepository;
+
     @Autowired
     private SpaceRepository spaceRepository;
 
-    private LocalDate targetDate;
-    private Space be;
-    private Space fe1;
-    private Reservation reservationBackEndTargetDate0To1;
-    private Reservation reservationBackEndTargetDate13To14;
-    private Reservation reservationBackEndTargetDate18To23;
-    private Reservation reservationFrontEnd1TargetDate0to1;
+    @Autowired
+    private MapRepository mapRepository;
 
-    public ReservationSaveRequest reservationSaveRequest = new ReservationSaveRequest(
-            1L, //TODO: 나중에 인수테스트 전부 생기면 갖다 쓰기
-            LocalDateTime.of(2021, 5, 6, 16, 23, 0),
-            LocalDateTime.of(2021, 5, 6, 19, 23, 0),
-            "1234",
-            "bada",
-            "회의"
-    );
+    @Autowired
+    private ReservationRepository reservationRepository;
+
+    private ReservationSaveRequest reservationSaveRequest;
+    private Reservation savedReservation;
 
     @BeforeEach
     void setUp() {
-        targetDate = LocalDate.of(2021, 7, 9);
-        be = spaceRepository.findById(1L).orElseThrow(NoSuchSpaceException::new);
-        fe1 = spaceRepository.findById(2L).orElseThrow(NoSuchSpaceException::new);
+        memberRepository.save(POBI); //TODO: 관련 테스트메서드 생성 시 repository 안쓰도록 수정 - 샐리
+        mapRepository.save(LUTHER);
+        spaceRepository.save(BE);
+        spaceRepository.save(FE1);
 
-        reservationBackEndTargetDate0To1 = new Reservation.Builder()
-                .startTime(targetDate.atStartOfDay())
-                .endTime(targetDate.atTime(1, 0, 0))
-                .description("찜꽁 1차 회의")
-                .userName("찜꽁")
-                .password("1234")
-                .space(be)
-                .build();
+        reservationSaveRequest = new ReservationSaveRequest(
+                BE.getId(),
+                TOMORROW_START_TIME.plusHours(1),
+                TOMORROW_START_TIME.plusHours(2),
+                SALLY_PASSWORD,
+                SALLY_NAME,
+                SALLY_DESCRIPTION);
 
-        reservationBackEndTargetDate13To14 = new Reservation.Builder()
-                .startTime(targetDate.atTime(13, 0, 0))
-                .endTime(targetDate.atTime(14, 0, 0))
-                .description("찜꽁 2차 회의")
-                .userName("찜꽁")
-                .password("1234")
-                .space(be)
-                .build();
-
-        reservationBackEndTargetDate18To23 = new Reservation.Builder()
-                .startTime(targetDate.atTime(18, 0, 0))
-                .endTime(targetDate.atTime(23, 59, 59))
-                .description("찜꽁 3차 회의")
-                .userName("찜꽁")
-                .password("6789")
-                .space(be)
-                .build();
-
-        reservationFrontEnd1TargetDate0to1 = new Reservation.Builder()
-                .startTime(targetDate.atStartOfDay())
-                .endTime(targetDate.atTime(1, 0, 0))
-                .description("찜꽁 5차 회의")
-                .userName("찜꽁")
-                .password("1234")
-                .space(fe1)
+        savedReservation = new Reservation.Builder()
+                .startTime(reservationSaveRequest.getStartDateTime())
+                .endTime(reservationSaveRequest.getEndDateTime())
+                .password(reservationSaveRequest.getPassword())
+                .userName(reservationSaveRequest.getName())
+                .description(reservationSaveRequest.getDescription())
+                .space(BE)
                 .build();
     }
 
     @DisplayName("예약을 등록한다.")
     @Test
     void save() {
-        //given
-        ReservationSaveRequest reservationSaveRequest = new ReservationSaveRequest(
-                1L, //TODO: 나중에 인수테스트 전부 생기면 갖다 쓰기
-                LocalDateTime.now().plusDays(1),
-                LocalDateTime.now().plusDays(1).plusHours(1),
-                "2345",
-                "sally",
-                "회의입니다."
-        );
-
-        //when
-        ExtractableResponse<Response> response = saveReservation(reservationSaveRequest);
+        //given, when
+        String api = "/api/maps/" + LUTHER.getId() + "/reservations";
+        ExtractableResponse<Response> response = saveReservation(api, reservationSaveRequest);
 
         //then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value());
@@ -114,13 +86,15 @@ public class ReservationControllerTest extends AcceptanceTest {
     @Test
     void delete() {
         //given
-        saveReservation(reservationSaveRequest);
-        ReservationDeleteRequest reservationDeleteRequest = new ReservationDeleteRequest("1234");
+        String saveApi = "/api/maps/" + LUTHER.getId() + "/reservations";
+        ExtractableResponse<Response> saveResponse = saveReservation(saveApi, reservationSaveRequest);
+        String api = saveResponse.header("location");
 
         //when
-        final ExtractableResponse<Response> response = deleteReservation(reservationDeleteRequest);
+        ReservationDeleteRequest reservationDeleteRequest = new ReservationDeleteRequest("1230");
 
         //then
+        ExtractableResponse<Response> response = deleteReservation(api, reservationDeleteRequest);
         assertThat(response.statusCode()).isEqualTo(HttpStatus.NO_CONTENT.value());
     }
 
@@ -128,19 +102,20 @@ public class ReservationControllerTest extends AcceptanceTest {
     @Test
     void find() {
         //given
-        be = spaceRepository.findById(1L).orElseThrow(NoSuchSpaceException::new);
+        ExtractableResponse<Response> saveResponse = saveExampleReservations();
+        String spaceId = String.valueOf(reservationSaveRequest.getSpaceId());
+        String api = saveResponse.header("location")
+                .replaceAll("/reservations/[0-9]", "/spaces/" + spaceId + "/reservations");
 
         //when
-        ExtractableResponse<Response> response = findReservations(1L, "2021-07-09");
-        ReservationFindResponse actualResponse = response.as(ReservationFindResponse.class);
+        ExtractableResponse<Response> response = findReservations(api, TOMORROW.toString());
 
+        ReservationFindResponse actualResponse = response.as(ReservationFindResponse.class);
         ReservationFindResponse expectedResponse = ReservationFindResponse.of(
-                Arrays.asList(
-                        reservationBackEndTargetDate0To1,
-                        reservationBackEndTargetDate13To14,
-                        reservationBackEndTargetDate18To23
-                )
-        );
+                List.of(savedReservation,
+                        BE_AM_ZERO_ONE,
+                        BE_PM_ONE_TWO,
+                        BE_PM_SIX_TWELVE));
 
         //then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
@@ -154,19 +129,20 @@ public class ReservationControllerTest extends AcceptanceTest {
     @Test
     void findAll() {
         //given
+        ExtractableResponse<Response> saveResponse = saveExampleReservations();
+        String api = saveResponse.header("location")
+                .replaceAll("/reservations/[0-9]", "/reservations");
 
         //when
-        ExtractableResponse<Response> response = findAllReservations("2021-07-09");
-        ReservationFindAllResponse actualResponse = response.as(ReservationFindAllResponse.class);
+        ExtractableResponse<Response> response = findAllReservations(api, TOMORROW.toString());
 
+        ReservationFindAllResponse actualResponse = response.as(ReservationFindAllResponse.class);
         ReservationFindAllResponse expectedResponse = ReservationFindAllResponse.of(
-                Arrays.asList(
-                        reservationBackEndTargetDate0To1,
-                        reservationBackEndTargetDate13To14,
-                        reservationBackEndTargetDate18To23,
-                        reservationFrontEnd1TargetDate0to1
-                )
-        );
+                List.of(savedReservation,
+                        BE_AM_ZERO_ONE,
+                        BE_PM_ONE_TWO,
+                        BE_PM_SIX_TWELVE,
+                        FE1_ZERO_ONE));
 
         //then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
@@ -176,47 +152,55 @@ public class ReservationControllerTest extends AcceptanceTest {
                 .isEqualTo(expectedResponse);
     }
 
-    private ExtractableResponse<Response> saveReservation(final ReservationSaveRequest reservationSaveRequest) {
+    private ExtractableResponse<Response> saveExampleReservations() {
+        reservationRepository.save(BE_AM_ZERO_ONE);
+        reservationRepository.save(BE_PM_ONE_TWO);
+        reservationRepository.save(BE_PM_SIX_TWELVE);
+        reservationRepository.save(FE1_ZERO_ONE);
+
+        String api = "/api/maps/" + LUTHER.getId() + "/reservations";
+        return saveReservation(api, reservationSaveRequest);
+    }
+
+    private ExtractableResponse<Response> saveReservation(final String api, final ReservationSaveRequest reservationSaveRequest) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("application/json")
                 .filter(document("reservation/post", getRequestPreprocessor(), getResponsePreprocessor()))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .body(reservationSaveRequest)
-                .when().post("/api/maps/1/reservations")
+                .when().post(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> deleteReservation(final ReservationDeleteRequest reservationDeleteRequest) {
+    private ExtractableResponse<Response> deleteReservation(final String api, final ReservationDeleteRequest reservationDeleteRequest) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("application/json")
                 .filter(document("reservation/delete", getRequestPreprocessor(), getResponsePreprocessor()))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .body(reservationDeleteRequest)
-                .when().delete("/api/maps/1/reservations/1")
+                .when().delete(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> findReservations(final Long spaceId, final String date) {
+    private ExtractableResponse<Response> findReservations(final String api, final String date) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("*/*")
                 .filter(document("reservation/get", getRequestPreprocessor(), getResponsePreprocessor()))
-                .queryParams(
-                        "spaceId", spaceId,
-                        "date", date)
-                .when().get("/api/maps/1/spaces/1/reservations")
+                .queryParams("date", date)
+                .when().get(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> findAllReservations(final String date) {
+    private ExtractableResponse<Response> findAllReservations(final String api, final String date) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("*/*")
                 .filter(document("reservation/get_all", getRequestPreprocessor(), getResponsePreprocessor()))
                 .queryParam("date", date)
-                .when().get("/api/maps/1/reservations")
+                .when().get(api)
                 .then().log().all().extract();
     }
 }
